fix: gap between title and toc

--- a/src/style/darkMode.css
+++ b/src/style/darkMode.css
@@ -282,7 +282,7 @@ body {
 
   .markdown-toc {
     position: relative;
-    top: 0;
+    top: 4rem;
     right: 0;
     width: 100%;
     margin-bottom: 1rem;
